# c64_demos

./: .gitignore  README.md  sprites1.spriteproject  test.asm
demos/3d-cube-animation/: 3d-cube-animation.cpp  Makefile
demos/alien-fart/: README.md  TECHNICAL.md  build.sh  generate_frames.py  main.asm  preview.html
demos/cubism/: README.md
demos/cubism/part3/eval/vulkan-grid-points/: CMakeLists.txt
demos/exploding-chicken/: README.md  chicken-data.i  generate_chicken.py  main.asm
demos/floodlights/: floodlights-data.i  floodlights.prg  generate_floodlights.py
demos/rope-sine/: README.md  gen-rope-sine.py  main.asm  rope-sine-data.i
test/3d-cube-animation/: README.md
test/bresenham/: README.md  bresenham_line.py  example_shapes.py
test/chicken-explosion/: README.md  generate_chicken_animation.py
test/eyes-to-cubes/: Makefile  README.md  eyes-to-cubes.cpp
test/floodlights/: README.md  floodlights-data.i  main.asm
test/hitmen-fli-logo/: README.md  fli_font_data.py  generate_hitmen_fli_logo.py  hitmen_fli_data.i
test/opengl-donut-accelerator/: BEFORE_AFTER.md  COMPARISON.md  GEOMETRY_3D.md  Makefile  README.md  VISUAL_GUIDE.md  donut-accelerator  opengl-textured-rotating-donut.cpp
test/opengl-icosahedron/: Makefile  README.md  opengl-icosahedron-glpoints.cpp  opengl-icosahedron.cpp
test/opengl-morphing-models/: .gitignore  Makefile  README.md  opengl-morphing-models.cpp
tools/: README.md
tools/alien-animation/: Makefile  README.md  generate_alien_animation.py  generated_video.html  test_frames.html  test_frames.py
tools/cow-fart-animation/: README.md  generate_cow_fart_animation.py
(+93 files in other folders)
